# nuke-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEMO.md  GPT55_REVIEW_2026-04-27.md  GPT55_REVIEW_2026-04-27_v0.2.0.md  GPT55_REVIEW_PROMPT.md  HANDOFF_2026-04-26.md  HANDOFF_2026-04-27_v0.2.0.md  README.md  pyproject.toml
docs/discovery/: announcement.md  awesome-mcp-pr.md  mcpso-listing.md
docs/plans/: 2026-04-07-nuke-mcp-v2.md
nuke_plugin/: __init__.py  _watchdog.py  addon.py  init_hook.py  menu.py
src/nuke_mcp/: __main__.py  annotations.py  connection.py  main_thread.py  profiles.py  prompts.py  registry.py  response.py  server.py  tasks.py
src/nuke_mcp/models/: __init__.py  _warnings.py  comp.py  node.py  render.py
src/nuke_mcp/prompts/: audit_acescct_consistency.md  audit_acescct_consistency_guide.md  build_3d_camera_track_project.md  build_aov_relight_pipeline.md  (+5 more)
tests/: conftest.py  test_annotations.py  test_aov.py  test_audit.py  test_channels.py  test_color.py  test_comp.py  test_connection.py  test_coverage_gates.py  test_deep.py  test_deep_workflow.py  test_diff.py  test_digest.py  test_distortion.py  test_expressions.py  test_graph.py  test_helpers.py  test_knobs.py  test_ml.py  test_models.py  test_profiles.py  test_prompts.py  test_read.py  test_registry.py  test_render.py  test_roto.py  test_safety.py  test_salt_spill.py  test_script.py  test_speed.py  test_tasks.py  test_tasks_tools.py  test_track_workflow.py  test_tracking.py  test_truncation.py  test_viewer.py  test_watchdog.py
tests/contract/: headless_runner.py  test_live_nuke.py
(+26 files in other folders)
