[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nuke-mcp"
version = "0.1.0"
description = "MCP server for Foundry Nuke"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Josh"}]
readme = "README.md"

dependencies = [
    "fastmcp>=2.14,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.8",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
nuke-mcp = "nuke_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "integration: requires a running Nuke instance",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.coverage.run]
source = ["nuke_mcp"]
omit = [
    "*/tests/*",
    "*/.venv*/*",
    "*/venv*/*",
    "*/site-packages/*",
    "src/nuke_mcp/__main__.py",
    "nuke_plugin/init_hook.py",
]

[tool.coverage.report]
# Per-file gates live in tests/test_coverage_gates.py; the global gate is
# disabled so the suite isn't held back by un-tested modules (tracking.py,
# deep.py) that A4-followups will fill.
fail_under = 0
